Fix a bug where leftHand and rightHand were in the wrong positions
Also fixed a client side bug where syncing hands failed to account for tiles in placemat.

Begin working on tile placement and turns interfaces

--- a/css/gameBoard.css
+++ b/css/gameBoard.css
@@ -71,7 +71,8 @@ This means that something using bottom is off the page - hence we must use top. 
 
 /*TODO: If tiles aren't at max size and height is much greater than width, the tiles run into each other, as the negative bottoms are height based, but tiles are width bound. */
 #gameBoard #topHand img {
-	max-width: calc(calc(100vw - 19.04vh) / 14);
+	max-width: calc(calc(100vw - 19.04vh) / 16); /*Raised from 14 in order to allow for more tiles to fit. */
+	margin-left: calc(calc(100vw - 19.04vh) / 17 / -10); /*Negative margin of 10%. Allows even more tiles to fit. */
 	max-height: 12vh;
 	/*transform: rotate(180deg);*/ /*Rotate tiles 180 degrees away from the viewer (they would be across from this person)*/
 }
@@ -101,6 +102,23 @@ This means that something using bottom is off the page - hence we must use top. 
 
 #gameBoard #tilePlacemat img {
 	margin-right: 20px;
+	border-radius: calc(calc(100vw - calc(var(--vh) * 19.04)) / 14 / 12); /*border radius 1/12th the width of a tile. TODO: This should be analyzed later to make sure it works right*/
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #3D003F99;
+  }
+  50% {
+    background-color: #FF4136B0;
+  }
+  100% {
+	background-color: #3D003F99;
+  }
+}
+
+#gameBoard #tilePlacemat img.pending {
+	animation: pulse 5s infinite;
 }
 
 #gameBoard #compass {
@@ -148,6 +166,31 @@ This means that something using bottom is off the page - hence we must use top. 
 	max-height: 5vh;
 	max-width: 5vw;
 	z-index: 1;
+}
+
+#gameBoard #placeTilesButton {
+	position: absolute;
+	right: calc(9.52vh + 12vw);
+	top: 64vh;
+	width: 10vw;
+	height: 5vh;
+	border-radius: 50vh;
+	font-size: 1.6vh;
+}
+
+#gameBoard #nextTurnButton {
+	position: absolute;
+	right: calc(9.52vh + 12vw);
+	top: 70vh;
+	width: 10vw;
+	height: 5vh;
+	border-radius: 50vh;
+	font-size: 1.6vh;
+}
+
+#gameBoard #placeTilesButton:disabled, #gameBoard #nextTurnButton:disabled {
+	opacity: 0.5;
+	cursor: not-allowed;
 }
 
 #gameBoard {
